# modal-stack

./: .pre-commit-config.yaml  README.md  cli.py  main.py  pyproject.toml
.cursor/skills/create-model-config/: SKILL.md
.cursor/skills/recommend-llm-models/: SKILL.md  reference.md
configs/: _example.yaml  gemma4_26b.yaml  qwen3_coder_next.yaml
models/: _generated.py  config.py  health.py  server.py
schemas/: model-config.schema.json
scripts/: generate_config.py  generate_readme.py
